# stacknew

./: .gitignore  CMakeLists.txt  Makefile  README.md  controller.cpp  controller.hpp  controller_test.cpp  data.cpp  data.hpp  dataaccessor.cpp  dataaccessor.hpp  datestring.cpp  datestring.hpp  decodedhtmlstring.cpp  decodedhtmlstring.hpp  decodedhtmlstring_test.cpp  decodedstring.cpp  decodedstring.hpp  decodedstring_test.cpp  escapedtags.cpp  escapedtags.hpp  escapedtags_test.cpp  listentries.hpp  listentry.hpp  main.cpp  makelistentries.cpp  makelistentries.hpp  makelistentries_test.cpp  notes.txt  openlink.cpp  openlink.hpp  playsound.cpp  playsound.hpp  qtuserinterface.cpp  qtuserinterface.hpp  question.hpp  questions.hpp  realdataaccessor.cpp  realdataaccessor.hpp  realstorage.cpp  (+15 more)
